--- a/src/app/view/empleados/empleados.component.html
+++ b/src/app/view/empleados/empleados.component.html
@@ -1,3 +1,6 @@
+<!-- Loader Component -->
+<app-loader></app-loader>
+
 <div class="container-fluid mt-4">
     <div class="card empleados-moderno">
         <!-- Header modernizado -->
