Implementacion de loader en varios modulos

--- a/src/app/view/my-account/my-account.component.html
+++ b/src/app/view/my-account/my-account.component.html
@@ -1,3 +1,6 @@
+<!-- Loader Component -->
+<app-loader></app-loader>
+
 <div class="container-fluid profile-container">
     <div class="row justify-content-center">
         <div class="col-12 col-xl-10">
