--- a/src/app/view/tasa-cambiaria/tasa.component.html
+++ b/src/app/view/tasa-cambiaria/tasa.component.html
@@ -1,3 +1,6 @@
+<!-- Loader Component -->
+<app-loader></app-loader>
+
 <div class="container-fluid mt-4">
   <div class="card pacientes-moderno">
     <!-- Header modernizado -->
