--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
+<!-- Loader Component -->
+<app-loader></app-loader>
+
 <div class="dashboard-moderno mb-5">
   <div class="container-fluid px-4 py-4">
 
